--- a/vendas.html
+++ b/vendas.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Página de vendas</h1>
     <p>Construido durante a aula de gitHub do Prof. Nélio</p>
+    <p>Vendas = R$ 5000,00</p>
     <a href="index.html">Voltar para a pégina anterior</a>
 </body>
 </html>
